fix text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -213,13 +213,16 @@ body{
 .message{
     align-items: center;
     width: 300px;
-    height:50px;
-    padding: 0 15px;
+    padding: 15px 15px;
     background: #fff;
     border-radius: 10px;
     
 }
 
+.message .text{
+    width:200px;
+    word-wrap:break-word;
+}
 
 
 .message span{
@@ -288,7 +291,7 @@ body{
 }
 
 .item-emojis{
-    display: inline-block;
+   display: inline-block;
    cursor: pointer;
    font-size: 24px;
    margin: 5px 5px ;
